Fix mobile menu items alignment

--- a/assets/src/scss/layout/header.scss
+++ b/assets/src/scss/layout/header.scss
@@ -707,7 +707,6 @@
     background-repeat: no-repeat;
     background-size: 0 4px;
     padding-bottom: fix-font-size-hack(0.417em);
-    text-align: center;
     text-decoration: none;
     transition: background-size 0.25s ease;
 
